--- a/Logarithme et exponentielle.tex
+++ b/Logarithme et exponentielle.tex
@@ -37,10 +37,10 @@
 \subsection{Propri\'et\'ees du $e$}
 \begin{itemize}
 	\item Th\'eor\`eme: pour tout $x \in \mathbb{R}$,
-		\[e^x = \lim_{n\to\infty} \sum_{k=0}^{n} (\frac{x^k}{k!}) \]
+		\[e^x = \lim_{n\to\infty} \sum_{k=0}^{n} \frac{x^k}{k!} \]
 	\item Pour $x = 1$,
-		\[e = \lim_{n\to\infty} \sum_{k=0}^{n} (\frac{1}{k!})\]
-		\[e = \sum_{k=0}^{n} (\frac{1}{k!}) + \int_{0}^{1} \frac{(1-t)^n}{n!}e^tdt\]
+		\[e = \lim_{n\to\infty} \sum_{k=0}^{n} \frac{1}{k!}\]
+		\[e = \sum_{k=0}^{n} \frac{1}{k!} + \int_{0}^{1} \frac{(1-t)^n}{n!}e^tdt\]
 	\item Th\'eor\`eme: $e$ est irrationnel
 \end{itemize}
 
