--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -65,6 +65,12 @@
 		$\cos p - \cos q = -2\sin\frac{p+q}{2}\sin\frac{p-q}{2}$ \\
 		$\sin p + \sin q = 2\sin\frac{p+q}{2}\cos\frac{p-q}{2}$ \\
 		$\sin p - \sin q = 2\sin\frac{p-q}{2}\cos\frac{p+q}{2}$ \\
+
+	\item $u = \tan \frac{t}{2}$\\
+		$\sin t = \frac{2u}{1+u^2}$\\
+		$\tan t = \frac{2u}{1-u^2}$\\
+		$\cos t = \frac{1-u^2}{1+u^2}$
+
 \end{itemize}
 
 \subsection{Tangente}
