--- a/Entiers naturels.tex
+++ b/Entiers naturels.tex
@@ -48,7 +48,7 @@ Il existe un ensemble non vide, not\'e $\mathbb{N}$, muni de relation d'ordre to
 	\item Valuation p-adique:
 		\begin{itemize}
 			\item D\'efinition: pour $n \in \mathbb{N}^*$ on pose $V_p(n)$ \\
-				\[n = \prod_{p \in \mathbb{P}} p^{V_p(n)}\]
+				\[n = \prod_{p \in \mathcal{P}} p^{V_p(n)}\]
 			\item $V_p(nm) = V_p(n) + V_p(m)$ \\
 				$n|m \Leftrightarrow \forall p \in \mathcal{P}, V_p(n) \leq V_p(m)$
 		\end{itemize}
