--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -28,11 +28,11 @@
 		$\sinh'$ $ = \cosh$
 	\item Formules: \\
 		$\cosh (a+b) = \cosh a\cosh b + \sinh a\sinh b$ \\
-		$\cosh (a-b) = \cosh a\cosh b - \sinh a\sinh b$ \\
 		$\sinh (a+b) = \sinh a\cosh b + \sinh b\cosh a$ \\
+		$\cosh (a-b) = \cosh a\cosh b - \sinh a\sinh b$ \\
 		$\sinh (a-b) = \sinh a\cosh b - \sinh b\cosh a$ \\
 		$\cosh^2 a = \frac{\cosh 2a + 1}{2}$ \\
-		$\sinh^2 a = \frac{\cosh 2a - 1}{2}$
+		$\sinh^2 a = \frac{\cosh 2a - 1}{2}$ \\
 \end{itemize}
 
 \section{Fonctions cosinus, sinus, tangente}
