--- a/Coefficients binomiaux.tex
+++ b/Coefficients binomiaux.tex
@@ -32,6 +32,11 @@
 \begin{theo} Pascal (\(n \in \mathbb{N}, k \in \mathbb{N}\)): \\
 	\[\binom{n+1}{k+1} = \binom{n}{k} + \binom{n}{k+1}\]
 \end{theo}
+\begin{prop} Changement d'indice\\
+	Soient I et J deux ensembles finis d'indices et $\varphi$ une bijection de I sur J. Alors
+	\[\underset{i \in I}{\sum} u_{\varphi(i)}\ = \underset{j \in J}{\sum} u_j\]
+
+\end{prop}
 \begin{theo}
 	Pour tout \(k,n \in \mathbb{N}, \binom{n}{k} \in \mathbb{N}\)
 \end{theo}
